# djangorestframework-example

./: LICENSE  README.md
basic/: .gitignore  README.md  pyproject.toml
basic-with-mysql/: README.md  pyproject.toml
basic-with-mysql/docs/: 模版说明.md
basic-with-mysql/src/: settings.py
basic-with-mysql/src/core/management/commands/: init_db.py
basic-with-postgresql/: .env.example  .gitignore  README.md  pyproject.toml
basic-with-postgresql/docs/: 模版说明.md
basic-with-postgresql/src/: settings.py
basic-with-postgresql/src/core/management/commands/: init_db.py
basic-with-postgresql/tests/: test_db.py  test_settings.py
basic/docs/: 模版说明.md
basic/src/: settings.py  urls.py
basic/tests/: conftest.py
