[project]
name = "basic"
version = "0.1.1"
description = "minimum application"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "django-filter>=25.2",
    "djangorestframework>=3.16.1",
    "drf-spectacular[sidecar]>=0.29.0",
    "markdown>=3.10",
    "ruff>=0.14.10",
]

[[tool.uv.index]]
url = "https://pypi.tuna.tsinghua.edu.cn/simple"
default = true
